fixed items squishing together when screen got smaller

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Poppins;
-    height: 100vh;
+    
     margin: 0;
     display: flex;
     justify-content: center;
@@ -22,6 +22,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 10%;
 
 }
 
